Fix travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
-  local_dir: dist/boater
+  local_dir: dist/jourly
   on:
     branch: master
